fixing nav links on mobile view

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -271,4 +271,9 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
   .home-widget-holder{
     margin-bottom: 50px;
   }
+
+  .nav > li {
+    position: relative;
+    display: block;
+  }
 }
